--- a/.github/workflows/build-ci-image.yml
+++ b/.github/workflows/build-ci-image.yml
@@ -6,8 +6,9 @@ name: Build CI Image
 on:
   # Rebuild when Dockerfile changes
   push:
-    branches:
-      - master
+    # XXX
+    # branches:
+    #   - master
     paths:
       - '.github/docker/Dockerfile'
       - '.github/workflows/build-ci-image.yml'
